<resources>
    <string name="app_name">FoodJunction</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="food_junction">Food Junction</string>
    <string name="image">Image</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q1">Q.1 : What is Food Junction?</string>
    <string name="a1">Food Junction is a food delivery service that does Home Deliveries to its\'s customer\'s from over 15+ restaurants/outlets in Pune.</string>
    <string name="q2">Q.2 : What locations does Food Junction service, at the moment?</string>
    <string name="a2">Currently ,Food Junction is servicing it\'s customers only in Pune.</string>
    <string name="q3">Q.3 : How are we guys different?</string>
    <string name="a3">Best products - We only list the products which have passed our tests and are the best suitable for delivery. This will help in giving a better consumer experience, so you can get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for Food Junction. Convenience - No need to haggle for prices.</string>
    <string name="q4">Q.4 : What are the delivery charges?</string>
    <string name="a4">On orders above Rs. 299 you get free delivery. On orders below Rs. 299 we charge nominal Rs. 50 delivery charge.</string>
    <string name="q5">Q.5 : What payment modes do we accept?</string>
    <string name="a5">Currently we only offer Cash On Delivery. Soon we will be introducing more payment options in the application itself.</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="place_order">Place Order</string>
    <string name="can_t_remember_your_password">Can\'t Remember Your Password?</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="next">NEXT</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="ok">OK</string>
    <string name="your_order_has_been_placed_successfully">Your Order Has Been Placed Successfully !</string>
    <string name="time_to_reset_your_password">Time To Reset Your Password</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below:</string>
    <string name="otp_4_characters">OTP (4 Characters)</string>
    <string name="new_password_min_4_characters">New Password (Min. 4 Characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">SUBMIT</string>
    <string name="choose_from_menu_listed_below">Choose From Menu Listed Below:</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="name_min_3_characters">Name (Min. 3 characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password(Min. 4 characters)</string>
    <string name="signup">SIGNUP</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="_91_999999999">+91-999999999</string>
    <string name="you_don_t_have_any_favorite_restaurant">You Don\'t Have Any Favorite Restaurant</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="you_haven_t_placed_any_order">You Haven\'t Placed Any Order!</string>
    <string name="order_some_delicious_food_now">Order Some Delicious Food Now !</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="rs_200">Rs. 200</string>
    <string name="name_of_the_restaurant">Name of the Restaurant</string>
    <string name="rs_299_person">Rs.299/person</string>
    <string name="_4_5">4.5</string>
    <string name="_1">1.</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="rs_400">Rs. 400</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="_20_07_2020">20/07/2020</string>
    <string name="rating">Rating</string>
    <string name="cost_high_to_low">Cost (High to Low)</string>
    <string name="cost_low_to_high">Cost (Low to High)</string>
    <string name="sort">Sort</string>
    <string name="url">192.168.43.212</string>


</resources>