<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FAQFragment"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:padding="10dp"
                android:fontFamily="@font/poppins_medium"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/q1"
                android:text="@string/a1"
                android:textSize="18sp"
                android:padding="10dp"
                android:fontFamily="@font/poppins_medium"/>
        </RelativeLayout>

        <View
            android:id="@+id/underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.6"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:padding="10dp"
                android:fontFamily="@font/poppins_medium"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/q2"
                android:fontFamily="@font/poppins_medium"
                android:padding="10dp"
                android:text="@string/a2"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:id="@+id/underline1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.6"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:padding="10dp"
                android:fontFamily="@font/poppins_medium"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/q3"
                android:fontFamily="@font/poppins_medium"
                android:padding="10dp"
                android:text="@string/a3"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:id="@+id/underline2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.6"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:padding="10dp"
                android:fontFamily="@font/poppins_medium"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/q4"
                android:fontFamily="@font/poppins_medium"
                android:padding="10dp"
                android:text="@string/a4"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:id="@+id/underline3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.6"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:padding="10dp"
                android:fontFamily="@font/poppins_medium"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/q5"
                android:fontFamily="@font/poppins_medium"
                android:padding="10dp"
                android:text="@string/a5"
                android:textSize="18sp" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>