<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="275dp"
    android:layout_height="195dp"
    android:background="@color/colorPrimary"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/person_color"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:padding="2dp"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tvNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif-black"
        android:padding="5dp"
        android:text="@string/name"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/tvMobileHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_91_999999999"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:padding="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="23dp"
        />



</LinearLayout>